# qcursorconstraints

./: CMakeLists.txt  LICENSE  README.md  qcursorconstraints.cpp  qcursorconstraints.h
demo/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
examples/demo/: CMakeLists.txt
platform/: generic.cpp  wayland-pointer-constraints-unstable-v1-client-protocol.h  wayland.cpp  win32.cpp
qcursorconstraints/: CMakeLists.txt
qcursorconstraints/platform/: generic.cpp  wayland-pointer-constraints-unstable-v1-client-protocol.cpp  wayland.cpp  win32.cpp
